# AndroidMuduo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sanyinchen/nativelocaltcp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sanyinchen/nativelocaltcp/: MainActivity.kt
app/src/main/java/com/sanyinchen/nativelocaltcp/test/: EchoClient.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/sanyinchen/nativelocaltcp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
lib/src/main/cpp/: CMakeLists.txt  echo.cc  lib.cpp  onLoad.cpp
lib/src/main/cpp/boost/: CMakeLists.txt
lib/src/main/cpp/business/echo/: echo.cc  echo.h
lib/src/main/cpp/muduo/: CMakeLists.txt
lib/src/main/cpp/muduo/muduo/base/: CMakeLists.txt  CurrentThread.cc  CurrentThread.h  Exception.cc  FileUtil.cc  LogStream.h  Logging.cc  Logging.h
lib/src/main/cpp/muduo/muduo/net/: CMakeLists.txt  SocketsOps.cc
lib/src/main/java/com/sanyinchen/lib/: NativeEchoTcpServer.kt  NativeLib.kt  NativeLocalTcpServer.kt
lib/src/test/java/com/sanyinchen/lib/: ExampleUnitTest.kt
